data/all_generated_tests/raw_wast_tests/call_UnreachableCodeExecution_3282.wast
;; 1. **Test 1: Call to Invalid Function Index**    - Describe a function call using an index that is out of bounds for the available functions in the module.    - **Specific Constraint**: This tests the proper handling of invalid function indices in WebAssembly, particularly checking if the engine produces an appropriate error (due to the specific error handling in the WebAssembly implementation) or reaches an 'unreachable' instruction.    - **Test Relation**: Ensure the function index is such that, without proper error handling, the call might erroneously proceed and reach an 'unreachable' trap.

(assert_invalid
  (module
    (func $out-of-bounds-index
      (call 10)
    )
    (func)
  )
  "unknown function"
)